dnl Flock of Birds Libray
dnl Nathan Cournia <nathan@cournia.com>
dnl
dnl This file modified from libsig++ 1.2.5
dnl http://libsigc.sf.net

AC_INIT([fob],[1.0.2])

define(AC_PUSH_LIB,[dnl
ifdef([__LIB__],,[define([__LIB__],0)])dnl
ac_save_LIBS[]__LIB__="$LIBS"
define([__LIB__],builtin(eval,(__LIB__ + 1)))dnl
LIBS="$1"])
define(AC_POP_LIB,[dnl
define([__LIB__],builtin(eval,(__LIB__ - 1)))dnl
LIBS="$ac_save_LIBS[]__LIB__"])


dnl
dnl Source packaging numbers
FOB_MAJOR_VERSION=1
FOB_MINOR_VERSION=0
FOB_MICRO_VERSION=2

FOB_VERSION=$FOB_MAJOR_VERSION.$FOB_MINOR_VERSION.$FOB_MICRO_VERSION

#
# +1 : ? : +1  == new interface that does not break old one
# +1 : ? : 0   == new interface that breaks old one
#  ? : ? : 0   == no new interfaces, but breaks apps
#  ? :+1 : ?   == just some internal changes, nothing breaks but might work 
#                 better
# CURRENT : REVISION : AGE
LIBFOB_SO_VERSION=2:0:2
AC_SUBST(LIBFOB_SO_VERSION, $LIBFOB_SO_VERSION)

dnl AC_SUBST(FOB_RELEASE, $FOB_RELEASE)
AC_SUBST(FOB_VERSION)

AC_DEFINE_UNQUOTED(FOB_MAJOR_VERSION, $FOB_MAJOR_VERSION,[major])
AC_DEFINE_UNQUOTED(FOB_MINOR_VERSION, $FOB_MINOR_VERSION,[minor])
AC_DEFINE_UNQUOTED(FOB_MICRO_VERSION, $FOB_MICRO_VERSION,[micro])

dnl AC_CONFIG_AUX_DIR(scripts)

dnl For automake.
dnl VERSION=$FOB_VERSION
dnl PACKAGE=libfob

dnl Initialize automake stuff
dnl AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME,AC_PACKAGE_VERSION)

dnl Specify a configuration file
AM_CONFIG_HEADER(fob/config.h)


AC_ARG_ENABLE(verb,
[  --disable-verbose       disable message during flock intialization],
enable_verb=$enableval,enable_verb="yes"
)

AC_PROG_CC
AC_PROG_CPP

dnl Used for enabling the "-no-undefined" flag while generating DLLs
dnl Copied from the official gtk+-2 configure.in
AC_CANONICAL_HOST
dnl AC_MSG_CHECKING([for some Win32 platform])
dnl case "$host" in
dnl   *-*-mingw*|*-*-cygwin*)
dnl     platform_win32=yes
dnl     LIBSTDCPP_LIBS=-lstdc++
dnl     ;;
dnl   *)
dnl     platform_win32=no
dnl     LIBSTDCPP_LIBS=
dnl     ;;
dnl esac
dnl AC_SUBST(LIBSTDCPP_LIBS)
dnl AC_MSG_RESULT([$platform_win32])
dnl AM_CONDITIONAL(PLATFORM_WIN32, test "$platform_win32" = "yes")
dnl 
dnl AC_MSG_CHECKING([for native Win32])
dnl case "$host" in
dnl   *-*-mingw*)
dnl     os_win32=yes
dnl     MATH_LIB=
dnl     ;;
dnl   *)
dnl     os_win32=no
dnl     ;;
dnl esac
dnl AC_MSG_RESULT([$os_win32])
dnl AM_CONDITIONAL(OS_WIN32, test "$os_win32" = "yes")

dnl AM_DISABLE_STATIC

dnl Instruct build of dll for cygwin and mingw32 (libtool 1.4)
dnl Exports screw up badly on libtool 1.3, backing off to 1.2f
dnl Seems to be working again with libtool 1.4 
dnl AC_LIBTOOL_WIN32_DLL  

dnl libtool does all checks with $CC, not with $CXX
dnl maybe this should be fixed in libtool, not here
AM_PROG_LIBTOOL

dnl On FreeBSD 3.0 (and perhaps some other systems) GNU m4 is
dnl called `gm4' where `m4' is the system's own m4.
AC_CHECK_PROGS(M4, gm4 m4, m4)
AC_MSG_CHECKING(if m4 is gnu m4 (required))
if "$M4" --version 2>&1 < /dev/null | egrep 'GNU' > /dev/null; then
  AC_MSG_RESULT([yes])
else
  config_error=yes
  AC_MSG_RESULT([no (fail)])
  AC_MSG_ERROR([you must use GNU m4 to build libfob])
fi

AC_PROG_CXX
dnl AC_PROG_CXX_SUN
AC_LANG_CPLUSPLUS

AC_CXX_HAVE_STL
AC_CXX_HAVE_STD
AC_CXX_BOOL
AC_CXX_MUTABLE
dnl AC_CXX_NAMESPACES

ACX_PTHREAD( have_pthread=yes, [
	AC_MSG_ERROR([ pthread library not found!])
])

AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(LIBS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
	Makefile
	fob.doxygen
	fob/Makefile
	test/Makefile
])
